--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
+
 {
   "name": "chatforge-frontend",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "start": "vite preview",
     "preview": "vite preview"
   },
   "dependencies": {
